--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="Content-Language" content="en-us">
-<title>VIRTUOOSI</title>
-<meta http-equiv="Refresh" content="1;URL=http://www.pkky.fi/Resource.phx/pkky/projektit/virtuoosi/index.htx">
-
-</head>
-
-<body>
-siirrytään VIRTUOOSIN sivuille.........
-
-
-
-</body></html>
+<html>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Language" content="en-us" />
+        <title>VIRTUOOSI</title>
+        <meta http-equiv="Refresh" content="1;URL=vilma/index.html" />
+    </head>
+    <body></body>
+</html>
